--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- Home Section -->
   <section id="home" class="hero">
     <div class="hero-content">
-       <img src="website-portfolio/photo.jpg" alt="my photo" class="profile-pic"/>
+       <img src="photo.jpg" alt="my photo" class="profile-pic"/>
       <h2>Hello, I'm <span>Ieshwaryaa</span></h2>
       <p>A passionate Web Developer & Computer Science Student.</p>
       <button class="btn" onclick="scrollToSection('projects')">View My Work</button>
@@ -94,3 +94,4 @@
 </body>
 
 </html>
+
