--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <li>HTML , CSS, JavaScript</li>
 </ul>
 </div>
-<section>
+</section>
 
   <!-- Projects Section -->
   <section id="projects" class="projects section">
@@ -94,4 +94,5 @@
 </body>
 
 </html>
+
 
